@@ -1,6 +1,12 @@
 2008-09-27  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
 	* src/ccm-pixmap-glitz.c (ccm_pixmap_glitz_create_gl_drawable):
+      Sometimes i will need to think before commit somethings :). The real
+      fix for find pixmap format.
+
+2008-09-27  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+	* src/ccm-pixmap-glitz.c (ccm_pixmap_glitz_create_gl_drawable):
       Find pixmap format rework need review for nvidia cards.
 
 2008-09-22  Nicolas Bruguier  <gandalfn@club-internet.fr>
